# My-FastAPI-template

./: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
.github/workflows/: github-actions.yml
migrations/: env.py
src/: config.py  exceptions.py  main.py
src/database/: database.py
src/database/models/: base.py
src/repositories/: base.py
src/routes/: base.py
src/schemas/: base.py
src/services/: base.py
tests/: conftest.py  test_alembic.py
